reflection dpv update, sidebar fix

--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -181,7 +181,7 @@
                     </div>
                     <div class="col m12 l6">
                         <div class="input-field">
-                            <select name="needs_help">
+                            <select name="need_help">
                                 <option value="" disabled selected>Choose your option</option>
                                 <option value="true">Yes</option>
                                 <option value="false">No</option>
@@ -190,8 +190,8 @@
                         </div>
                     </div>
                     <div class="input-field col m12 l6">
-                        <input value="" id="help_why" type="text" class="validate">
-                        <label class="active" for="help_why">If yes, please tell us a little more about your
+                        <input value="" id="help_text" type="text" class="validate">
+                        <label class="active" for="help_text">If yes, please tell us a little more about your
                             challenge</label>
                     </div>
                 </div>
