--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -37,7 +37,7 @@
         {{!-- <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li> --}}
         <li><a class="waves-effect" href="/how?sesh={{sesh}}" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
         <li><a class="waves-effect" href="/history?sesh={{sesh}}" ><i class="material-icons">history</i>History of StartSOLE</a></li>
-        <li><a class="waves-effect" href="/resources?sesh={{sesh}}"><i class="material-icons">assignment</i>Teacher Resources<span class="new badge">4</span></a></li>
+        <li><a class="waves-effect" href="/resources?sesh={{sesh}}"><i class="material-icons">assignment</i>Teacher Resources</a></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect waves-light btn red hide-on-large-only hide-on-extra-large-only hide-on-small-and-down" href="/logout"><!--<i
         class="material-icons">exit_to_app</i>-->Logout</a></li>
