added update to SOLE controller, fixed tag display on sole cards, fixed tag display in edit view, updated sole-add view to be reusable for edit and add, fixed button for form, copied code for post on sole-edit (needs work), removed check in sole add route because it is redundant and not needed.

--- a/views/partials/sole-card.hbs
+++ b/views/partials/sole-card.hbs
@@ -14,7 +14,7 @@
         </div>
     {{#if tag}}
         <p class="sole-tag">
-            Class 7C
+            {{tag}}
         </p>
     {{/if}}
         <div class="sole-card-date">
