--- a/views/register.hbs
+++ b/views/register.hbs
@@ -65,7 +65,7 @@
 
 
 <form id="final-registration-form" class="" action="/complete-profile" method="get">
-  <input type="hidden" name="sesh" id="sesh" value="{{sesh}}">
+  <input type="hidden" name="sesh" id="sesh" value="">
   <input type="hidden" name="firstname" id="firstname" value="">
   <input type="hidden" name="lastname" id="lastname" value="">
 </form>
