spaced paragraphs differently and touched up logout screen

--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -1,10 +1,19 @@
 <div class="row" style="padding-top:50px;">
     <div class="col s12 offset-m2 m8 offset-l3 l6">
         <div class="card-panel">
-            <div class="row">
+            <div class="row center-align">
+                <video width="165" height="165" autoplay muted>
+                    <source src="/images/logos/animated-logo-small.webm" type="video/webm">
+                    <img src="/images/logos/question-square.png">
+                </video>
+            </div>
 
-            <h1>You're logged out!</h1>
-            <p><a href="/login">Log back in</a></p>
+            <div class="row center-align">
+
+            <h4>You're logged out!</h4>
+            <p>
+                <a href="/login" class="waves-effect waves-light btn">Log Back In</a>
+            </p>
             </div>
         </div>
     </div>
