--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -215,7 +215,9 @@
                 </div>
 
                 <div class="row">
-                    <input type="submit" value="Save" class="waves-effect waves-light btn">
+                  <button type="submit" class="waves-effect waves-light btn">
+                        Save
+                    </button>
                 </div>
             </form>
 
