--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,7 +6,12 @@
                     <img src="/images/facebook-login-button.png" id="fb-login" onmouseover="this.src='/images/facebook-login-button-hover.png'" onmouseout="this.src='/images/facebook-login-button.png'"  />
                 </div>
                 <div class="col s12 l6 center">
-                    <div class="g-signin2" data-onsuccess="onGoogleSignIn" data-theme="dark"></div>
+                    <div class="g-signin2"
+                         data-onsuccess="onGoogleSignIn"
+                         data-theme="dark"
+                         data-width="200"
+                         data-height="50"
+                         data-longtitle="true"></div>
                 </div>
             </div>
             <form id="login-form" action="/login" method="post">
