added delete to SOLE controller, updated cards to include delete button, soles-delete view and routes

--- a/views/partials/sole-card.hbs
+++ b/views/partials/sole-card.hbs
@@ -38,6 +38,10 @@
                href="/soles/{{id}}/reflect?sesh={{sesh}}">
                 Reflect
             </a>
+            <a class="btn-floating grey"
+               href="/soles/{{id}}/delete?sesh={{sesh}}">
+                <i class="material-icons">delete</i>
+            </a>
         {{/unless}}
     </div>
 
