consolidating config files for deploy

--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -44,5 +44,6 @@
 <script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 {{>question-templates}}
-<script type="text/javascript" src="/js/sole-config.js"></script>
+
+{{> sole-config-frontend-js}}
 <script type="text/javascript" src="/js/questions.js"></script>
