--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -121,5 +121,6 @@
 
 <input type="hidden" name="sesh" id="sesh" value="{{sesh}}">
 
-<script type="text/javascript" src="/js/sole-config.js"></script>
+
+{{> sole-config-frontend-js}}
 <script type="text/javascript" src="/js/questions.js"></script>
