--- a/views/layouts/no-sidebar.hbs
+++ b/views/layouts/no-sidebar.hbs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
-<script type="text/javascript" src="/js/sole-config.js"></script>
+
+
+{{> sole-config-frontend-js}}
 
 {{> header}}
 
