--- a/views/layouts/prelogin.hbs
+++ b/views/layouts/prelogin.hbs
@@ -11,7 +11,8 @@
 
 {{> footer}}
 <script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
-<script type="text/javascript" src="/js/sole-config.js"></script>
+
+{{> sole-config-frontend-js}}
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script id="facebook-jssdk" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10"></script>
 <meta name="google-signin-client_id" content="824307770319-v35co4sbfui42q2a93hcccvk68hfpam7.apps.googleusercontent.com">
