--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -20,7 +20,8 @@
 </div>
 
 <script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
-<script type="text/javascript" src="/js/sole-config.js"></script>
+
+{{> sole-config-frontend-js}}
 <script type="text/javascript">
   // connect to parse server
   Parse.initialize(soleConfig.appId);
