--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -227,7 +227,8 @@
 
 
 <script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
-<script type="text/javascript" src="/js/sole-config.js"></script>
+
+{{> sole-config-frontend-js}}
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="/js/dropzone.min.js"></script>
 <script type="text/javascript" src="/js/img-upload.js"></script>
