--- a/views/questions-single.hbs
+++ b/views/questions-single.hbs
@@ -19,7 +19,8 @@
                             <i class="material-icons left">favorite</i>
                             Favorite
                         </a>
-                        <a href="/questions/{{question.id}}/copy?sesh={{sesh}}" class="waves-effect waves-light btn">
+                        <a href="/sole-create?sesh={{sesh}}&question={{question.id}}" class="waves-effect waves-light
+                        btn">
                             <i class="material-icons left">assignment</i>
                             Create Lesson
                         </a>
@@ -69,6 +70,7 @@
                 <i class="material-icons">favorite</i>
             </a>
             <a class="teal btn-floating btn-large waves-effect waves-light tooltipped"
+               href="/sole-create?sesh={{sesh}}&question={{question.id}}"
                data-position="bottom"
                data-tooltip="Create Lesson Plan">
                 <i class="material-icons">assignment</i>
