added sample questions to question search

--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -70,6 +70,46 @@
                             learning at school, come from their every day experiences, or maybe even something completely new.
                             They typically connect more than one subject area.</p>
                     </div>
+
+                    <div class="row">
+                        <div class="col s4">
+                            <div class="card blue lighten-1">
+                                <div class="card-content center-align">
+                                    <a href="/questions/y3CR4uqF6E?sesh={{sesh}}">
+                                        <span class="card-title white-text">
+                                            What does power have to do with fairness and justice?
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col s4">
+                            <div class="card blue lighten-1">
+                                <div class="card-content center-align">
+                                    <a href="/questions/EJBeKeMefK?sesh={{sesh}}">
+                                        <span class="card-title white-text">
+                                            Why do your pupils get bigger in the dark?
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col s4">
+                            <div class="card blue lighten-1">
+                                <div class="card-content center-align">
+                                    <a href="/questions/kM5lKUxfZh?sesh={{sesh}}">
+                                        <span class="card-title white-text">
+                                            What happens to energy inside of your body?
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
                         <!-- End No results -->
                     {{/if}}
 
