WIP modal for app download if on mobile

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -83,3 +83,15 @@
 <form id="login-with-session" action="/" method="get">
   <input type="hidden" name="sesh" id="sesh" value="">
 </form>
+
+
+<!-- Modal Structure -->
+<div id="app-download-modal" class="modal">
+    <div class="modal-content">
+        <h4>Like SOLE? Try our App!</h4>
+        <p>Dooooo it!</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
