Modal for app download if on mobile (iOS only)

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -85,13 +85,26 @@
 </form>
 
 
-<!-- Modal Structure -->
-<div id="app-download-modal" class="modal">
+<!-- Modal for iOS download -->
+<div id="app-download-modal" class="modal bottom-sheet">
     <div class="modal-content">
-        <h4>Like SOLE? Try our App!</h4>
-        <p>Dooooo it!</p>
+        <div class="row center-align">
+            <h5>Try Our App!</h5>
+        </div>
+
+        <!--<ul>-->
+            <!--<li>Wirelessly connect to a projector</li>-->
+            <!--<li>Make and save observations</li>-->
+            <!--<li>View tutorials and tips</li>-->
+        <!--</ul>-->
+        <div class="row center-align">
+            <a href="https://itunes.apple.com/in/app/startsole-self-organized-learning-environment/id1097411683"  target="_blank">
+                <img src="images/logos/app-store-ios.png" class="img-responsive" alt="iTunes Download">
+            </a>
+        </div>
+
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+        <a class="modal-close waves-effect waves-green btn-flat">No Thanks</a>
     </div>
 </div>
