--- a/views/home.hbs
+++ b/views/home.hbs
@@ -47,25 +47,25 @@ No completed SOLEs yet
 <hr>
 --}}
 
-<!--<div class="row">-->
-	<!--<div class="col s12 offset-m1 m10 offset-l3 l6">-->
-		<!--<div class="card-panel">-->
-			<!--<div class="row center-align">-->
-			<!--<h3>My questions:</h3>-->
-			<!--<ul>-->
-			<!--{{#each questions.mine}}-->
-				<!--<li> <a href="/questions/{{id}}?sesh={{../sesh}}">{{text}}</a> </li>-->
-			<!--{{/each}}-->
-			<!--</ul>-->
+<div class="row">
+	<div class="col s12 offset-m1 m10 offset-l3 l6">
+		<div class="card-panel">
+			<div class="row center-align">
+			<h3>My questions:</h3>
+			<ul>
+			{{#each questions.mine}}
+				<li> <a href="/questions/{{id}}?sesh={{../sesh}}">{{text}}</a> </li>
+			{{/each}}
+			</ul>
 
-			<!--<h3>My favorite questions:</h3>-->
-			<!--<ul>-->
-			<!--{{#each questions.favorites}}-->
-				<!--<li> + <a href="/questions/{{id}}?sesh={{sesh}}">{{text}}</a></li>-->
-			<!--{{/each}}-->
-			<!--</ul>-->
+			<h3>My favorite questions:</h3>
+			<ul>
+			{{#each questions.favorites}}
+				<li> + <a href="/questions/{{id}}?sesh={{sesh}}">{{text}}</a></li>
+			{{/each}}
+			</ul>
 
-			<!--</div>-->
-		<!--</div>-->
-	<!--</div>-->
-<!--</div>-->
+			</div>
+		</div>
+	</div>
+</div>
