this closes #37 and #73

--- a/views/questions-single.hbs
+++ b/views/questions-single.hbs
@@ -73,7 +73,7 @@
         <div class="action-buttons-header hide-on-small-only">
             <a class="teal btn-floating btn-large waves-effect waves-light tooltipped"
                data-position="bottom"
-               data-tooltip="Favorite Question">
+               data-tooltip="Favorite Question" href="/questions/{{question.id}}/favorite?sesh={{sesh}}">
                 <i class="material-icons">favorite</i>
             </a>
             <a class="teal btn-floating btn-large waves-effect waves-light tooltipped"
