schoolAddress fix and schoolState WIP inclusion

--- a/views/complete-profile.hbs
+++ b/views/complete-profile.hbs
@@ -42,10 +42,10 @@
                 <label for="schoolSearch">What's your school?</label>
                   <input
                          id="schoolSearch"
-                         placeholder="American International School of Vienna"
+                         placeholder="Where will you SOLE?"
                          style="width:100%;" required>
                   <input type="hidden" id="schoolName" name="schoolName" value="">
-                  <input type="hidden" id="schoolAddress" name="schoolName" value="">
+                  <input type="hidden" id="schoolAddress" name="schoolAddress" value="">
                   <input type="hidden" id="schoolPlaceID" name="schoolPlaceID" value="">
                   <input type="hidden" id="schoolState" name="schoolState" value="">
 
